19. cas (13. cas CSS-a) - fixed courses hover effect on mobile size, adjusted team members images for laptop size and bigger

--- a/school-project/resources/scss/courses/courses.scss
+++ b/school-project/resources/scss/courses/courses.scss
@@ -50,10 +50,10 @@
 
     @media screen and (max-width: $phoneSize) {
         text-align: center;
-		transform: none;
-		transition: none;
+		transform: none !important;
+		transition: none !important;
 		&:hover {
-			transform: none;
+			transform: none !important;
 		}
 		ul {
 			list-style-type: none;
