--- a/school-project/resources/scss/team/team.scss
+++ b/school-project/resources/scss/team/team.scss
@@ -99,9 +99,8 @@ h3 {
 	.team-wrapper__teacher-img {
 		transform: skewX(-5deg);
 		img {
-			width: 100%;
-			max-width: 600px;
-			min-height: 450px;
+			width: 400px;
+			height: 300px;
 			box-shadow: 11px 11px 11px $blackColor;
 		}
 	}
